add module and api permissions
