# src/routes/index.route.ts
@@ -3,6 +3,7 @@ import userRoutes from "./user.route.js";
 import investorRoutes from "./investor.route.js";
 import investorDocumentRoutes from "./investorDocument.route.js";
 import activityLogRoutes from "./activityLog.route.js";
+import permissionRoutes from "./permission.route.js";
 import type { Express } from "express";
 
 const initRoutes = (app: Express) => {
@@ -11,6 +12,7 @@ const initRoutes = (app: Express) => {
   app.use("/api/investors", investorRoutes);
   app.use("/api/investor-documents", investorDocumentRoutes);
   app.use("/api/activity-logs", activityLogRoutes);
+  app.use("/api/permissions", permissionRoutes);
 };
 
 export default initRoutes;
